Fixed .Rmd file to .md file

--- a/HelloWorld.Rmd
+++ b/HelloWorld.Rmd
@@ -3,9 +3,8 @@ title: "HelloWorld"
 author: "ME!"
 date: "12/11/2020"
 output:
-  pdf_document: default
-  word_document: default
-  html_document: default
+  md_document:
+    variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
